client/src/App.css
/* ... */
.answer-button {
    margin-left: 10px;
    margin-right: 10px;
    cursor: pointer;
    width: 120px;
    height: 120px;
}

.levelUpImage {
    height: 30%;
}

.skip-tutorial-button {
    background-image: url('img/button-skip-tutorial.png');
    background-repeat: repeat-x;
    background-position: top;
    background-size: cover;
    margin: auto;
    margin-top: 20px;
    cursor: pointer;
    width: 400px;
    height: 70px;
    vertical-align: middle;
    line-height: 70px;

}

.skip-tutorial-button:hover {
    color: #eaeaea;
}

.confirm-level-up-button {
    background-image: url('img/button-skip-tutorial.png');
    background-repeat: repeat-x;
    background-position: top;
    background-size: cover;
    margin: auto;
    margin-top: 20px;
    cursor: pointer;
    width: 400px;
    height: 70px;
    vertical-align: middle;
    line-height: 70px;

}

.confirm-level-up-button:hover {
    color: #eaeaea;
}

.scrollable-text {
    max-height: 100%;
    overflow: scroll;
}

.center-text {
    text-align: center;
}

.input-answer {
    width: 100%;
    height: 60%;
}

.hidden > p {
    display: none;
}

.visible > p {
    display: block;
}

/***********************
INTRODUCTION
***********************/

.make-it-bigger:hover {
    transform: scale(1.3);
}

#bigger-font {
    font-size: 24px;
    font-weight: bold;
}

/***********************
TUTORIAL
***********************/

#video {
    color: white;
}

#video h2 {
    margin: 0;
    padding: 0;
    margin-bottom: 10px;
}

.flexible-wrapper-container {
    display: table;
    width: 100%;
}

.flexible-wrapper-content {
    display: table-cell;
    vertical-align: middle;
}

button {
    margin: 10px 20px;
}

button:hover {
    color: white;
    background-color: lightgray;
}

/***********************
CONTENT
***********************/

.content {
    border-top: 1px solid black;
    max-width: 100%;
    margin: 50px 100px 0 100px;
    padding: 0 5%;
    background: #ffffff;
    text-align: center;
    text-decoration: none;
}

.progress-bar {
    height: 40px;
    width: 70px;
}

.youTube-player {
    background-color: black;
    border: 1px solid black;
}

/***********************
SESSION SUMMARY
***********************/

.session-summary {
    align-content: center;
    text-align: center;
    display: inline-block;
    padding: 20px 20px;
}

/***********************
CONTACT
***********************/

.info-text {
    font-size: 20px;
}

.info-text a {
    color: #8ee4ff;
    text-decoration: none;
}

.info-text a:hover {
    text-decoration: underline;
}

.contact {
    border-top: 1px solid black;
    max-width: 100%;
    margin: 100px 100px 0 100px;
    padding: 0 5%;
    background: #ffffff;
    text-align: center;
    text-decoration: none;
}

.facebook, .twitter, .google {
    float: left;
    font-weight: bold;
}

.email {
    float: right;
    font-weight: bold;
}

.facebook1, .twitter1, .google1 {
    margin: 0 10px 0 40px;
}

.email1 {
    margin: 0 10px 0 40px;
}

.progress-bar {
    height: 50px;
    vertical-align: middle;
    margin: auto;
}

.progress-bar div {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    vertical-align: middle;
    display: inline-block;
}

.progress-bar-done {
    vertical-align: middle;
    background-color: white;
}

.progress-bar-todo {
    vertical-align: middle;
    background-color: rgba(0, 0, 0, 0.5);
}

.progress-bar-left-label {
    line-height: 50px;
    height: 50px;
    vertical-align: middle;
    padding-right: 15px;
    text-align: right;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.progress-bar-right-label {
    line-height: 50px;
    height: 50px;
    vertical-align: middle;
    padding-left: 15px;
    text-align: left;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.progress-bar-right-label .course-icon {
    margin: 0;
    padding: 0;
    margin-left: 10px;
}

.progress-bar-indicators {
    position: relative;
    height: 25px;
}

.progress-bar-indicators div {
    height: 2px;
}

.progress-bar-dot {
    top: 5px;
    position: absolute;
    width: 14px;
    height: 14px;
}

.login-form {
    margin: auto;
    padding-top: 10px;
    color: black;
    height: 255px;
    width: 400px;
    background-color: white;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.20), 0 2px 4px rgba(0, 0, 0, 0.29);
}

.login-form div {
    padding-top: 10px;
}

.login-form label {
    padding-top: 1px;
    text-align: center;
    display: inline-block;
    width: 110px;
}

.login-form input {
    padding-bottom: 1px;
    width: 205px;
    font-size: 16px;
    height: 22px;
    background-color: white;
    border: 0;
    border-bottom: 1px solid gray;
    font-family: 'Exo 2', sans-serif;
}

.login-form input[type='checkbox'] {
    width: 16px;
    height: 16px;
}

.login-form-buttons-container {
    margin-top: 15px;
}

.login-button {
    margin: 5px;
    padding: 0 !important;
    border: 0 !important;
    font-size: 15px !important;
    font-family: 'Exo 2', sans-serif;
    background-color: black !important;
    color: white;
    height: 28px !important;
    width: 130px !important;
    border-radius: 5px;
    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.20);
}

.login-button-fb {
    margin: 5px;
    padding: 0;
    border: 0;
    font-size: 15px;
    font-family: 'Exo 2', sans-serif;
    background-color: #0074D9 !important;
    color: white;
    height: 28px !important;
    width: 170px;
    border-radius: 5px;
    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.20);
}

.checkbox-label {
    text-align: left !important;
}

.text-error {
    height: 20px;
    color: #D00;
}

/***********************
FORM
***********************/

.form label {
    display: block;
    margin-top: 2rem;
    font-size: 2rem;
}
/* ... */

